# Advent-of-Code

./: .clang-format  CMakeLists.txt  README.md  build.sh
2024/01/: part1.cpp  part2.cpp
2024/02/: part1.cpp  part2.cpp
2024/03/: part1.cpp  part2.cpp
AOC/: AOC.cpp  AOC.hpp
cmake/: conan.cmake
src/2025/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp
